# cm.pep.timeTable/openapi/main.yaml
@@ -42,10 +42,15 @@ paths:
             schema:
               $ref: '#/components/schemas/LoginUserDto'
       responses:
-        204:
+        200:
           description: User logged is successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDto'
         400:
           description: USER-4001
+
 
   /event/create:
     post:
